[project]
name = "lowdown"
version = "0.1.0"
description = "Log and flag low-flying aircraft over a target location (apparent 14 CFR 91.119 low-altitude events)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
]

[project.scripts]
lowdown = "lowdown.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lowdown"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=8.2",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Line length (E501) is left to the formatter; long string literals may exceed it.
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "BLE", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over some lint niceties (kwargs-style dict() calls,
# explicit == comparisons, etc.).
"tests/*" = ["E712", "SIM", "C408"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_redundant_casts = true
# Flags stale `# type: ignore`s — e.g. the handful on SQLModel/SQLAlchemy ORM
# expressions (Column.desc(), Model.__table__) that mypy can't model; if a
# future mypy/SQLModel understands them, the unused ignore will surface here.
warn_unused_ignores = true
